# manot-client

./: .gitignore  LICENSE  README.md  manot-client-notebook.ipynb  pyproject.toml  setup.py
docs/source/: conf.py  index.rst
notebooks/: Deeplake Classifications.ipynb  Deeplake Detection.ipynb  Deeplake_Detections.ipynb  GCS Classification.ipynb  GCS Detection.ipynb  Huggingface Classification.ipynb  Huggingface Detection.ipynb  Huggingface classification.ipynb  Huggingface detection.ipynb  Local Classification.ipynb  Local Detection.ipynb  Local_detections.ipynb  S3 Classification.ipynb  S3 Detection.ipynb  S3_Detections.ipynb
src/: __init__.py
src/actioncable/: __init__.py  connection.py  message.py  subscription.py
src/manot/: __init__.py  cli.py  logger.py  manot.py  upload_manager.py
