[project]
name = "manot"
version = "0.1.1"
authors = [
    {name = "manot", email="info@manot.ai"},
]
license = {file = "LICENSE.txt"}
description = "the manot package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["src", "pyproject.toml"]

dependencies = [
    "requests>=2.28.1"
]

[project.urls]
homepage = "https://www.manot.ai"
documentation = "https://api.manot.ai/api-documentation/v1"
#repository = ""

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
