[project]
name = "manot"
version = "0.6.1"
authors = [
    { name = "manot", email = "engineering@manot.ai" },
]
license = { file = "LICENSE" }
description = "manot AI is a model observability platform to monitor computer vision performance in real-time."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["src", "pyproject.toml"]

dependencies = [
    "requests>=2.28.1",
    "Pillow~=9.2.0",
    "ipyplot~=1.1.1",
    "tqdm~=4.64.1",
]

[project.urls]
homepage = "https://www.manot.ai"
documentation = "https://api.manot.ai/api-documentation/v1"
#repository = ""

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
